@@ -17,11 +17,13 @@
   </property>
   <property>
     <name>fs.gs.metadata.cache.enable</name>
-    <value>true</value>
+    <value>false</value>
     <description>
       Whether or not to create an in memory cache of GCS objects created by
       the connector. This allows for immediate visibility of objects to
       subsequent list requests from the same client.
+      Note: enabling this property isn't necessary and in fact probably will
+      be detrimental to your job.
     </description>
   </property>
   <property>
